--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@
 
 body {
     min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,7 +52,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     max-width: 470px;
 }
 
@@ -61,8 +62,8 @@ header {
     z-index: 1;
     background-color: var(--white);
     padding: 30px 10px;
-    width: 100vw;
-    max-width: 480px;
+    width: 100%;
+    max-width: 470px;
     
 }
 
@@ -71,6 +72,59 @@ header {
     flex-direction: row;
     justify-content: space-between;
     margin: 0px 10px;
+}
+
+.popup {
+    display: none;
+}
+
+.popup.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 100px;
+    z-index: 3;
+    width: 80%;
+    max-width: 350px;
+    box-shadow: 10px 50px 100000px 50px var(--darkBlue);
+}
+
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border-radius: 5px;
+    padding: 25px;
+    background-color: var(--white);
+}
+
+.popup .mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    list-style-type: none;
+    
+}
+
+.popup .mobile-menu ul li a {
+    text-decoration: none;
+    color: var(--darkBlue);
+    font-size: 1.2rem;
+}
+
+.open-menu.active {
+    display: none;
+}
+
+.close-menu {
+    display: none;
+}
+
+.close-menu.active {
+    display: block;
 }
 
 .desktop-nav {
