--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 main {
@@ -59,12 +60,11 @@ main {
 /* HEADER STYLES */
 header {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     background-color: var(--white);
-    padding: 30px 10px;
+    padding: 20px 10px;
     width: 100%;
     max-width: 470px;
-    
 }
 
 .mobile-nav {
@@ -128,6 +128,38 @@ header {
 }
 
 .desktop-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.desktop-nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    list-style: none;
+}
+
+.desktop-nav ul li a {
+    text-decoration: none;
+    color: var(--grayishBlue);
+    font-size: 0.8rem;
+}
+
+.desktop-nav .btn {
+    width: 150px;
+    padding: 10px 10px;
+    border-radius: 25px;
+    border: none;
+    background: linear-gradient(to right, var(--limeGreen), var(--brightCyan));
+    color: var(--white);
+    font-weight: var(--fontBold);
+    font-size: 0.8rem;
+
+} 
+
+.desktop-nav {
     display: none;
 }
 
@@ -175,14 +207,11 @@ header {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    min-height: 100vh;
     background-color: var(--white);
     position: relative;
     z-index: 0;
     margin-top: -175px;
-    z-index: 0;
     padding-bottom: 100px;
-    
 }
 
 .imgLayer {
@@ -191,7 +220,11 @@ header {
     height: 600px;
 }
 
-.img1,
+.img1-desktop {
+    display: none;
+}
+
+.img1-mobile,
 .img2 {
     position: absolute;
     width: 100%;
@@ -209,6 +242,13 @@ header {
 
 .landing .description p {
     margin: 0 45px;
+}
+
+.landing .words-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 /* SERVICES SECTION STYLES */
@@ -256,6 +296,7 @@ header {
 
 .articles img {
     width: 100%;
+    height: 310px;
     border-radius: 10px 10px 0px 0px;
 } 
 
@@ -310,9 +351,6 @@ footer .socials img {
 
 footer .socials img:hover {
     cursor: pointer;
-    width: 35px;
-    height: auto;
-    transition: 0.1s ease;
 }
 
 footer .footer-links {
